--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                 <li>Vue</li>
                 <li>React</li>
                 <li>C#</li>
+                <li>Linux</li>
               </ul>
             </div>
           </div>
