--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                 alt="測試1"
             /></a>
             <div class="wrapper-work-area">
-              <h3>作品2</h3>
+              <h3>屏東果果</h3>
               <p class="ps">Program02</p>
               <p class="text-main">
-                這是一段說明文字這是一段說明文字這是一段說明文字
+                以屏東水果結合可愛的狗狗，來介紹屏東特產水果
               </p>
               <a href="#">More</a>
             </div>
